Farewell, my friend.

--- a/rp.conf
+++ b/rp.conf
@@ -12,3 +12,4 @@ hosts:
       /:
         proxy.reverse.url: http://server:8080
         proxy.preserve-host: ON
+        header.add: 'x-clacks-overhead: GNU Terry Pratchett'
